# stegos-explorer

./: .gitignore  Cargo.toml  README.md  deploy.sh  index.html
backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/2019-12-08-175905_create_blocks/: up.sql
backend/migrations/2019-12-18-163604_other_block_fileds/: down.sql
backend/migrations/2019-12-23-211244_micro_blocks/: up.sql
backend/migrations/2019-12-29-175614_awards/: up.sql
backend/migrations/2020-05-18_downsize_and_index/: up.sql
backend/migrations/2020-05-19_num_txs_trigger/: up.sql
backend/src/: lib.rs  schema.rs
blockchain_explorer/: .env  .eslintrc.js  Dockerfile  README.md  package.json  tsconfig.json
blockchain_explorer/public/: 404.html  index.html
blockchain_explorer/src/: App.vue  crypto.ts  main.ts  store.ts  utils.ts
blockchain_explorer/src/components/: awards_table.vue  block_list.vue  copyable.vue  escrow.vue
blockchain_explorer/src/data/: sample.json
blockchain_explorer/src/router/: index.ts
blockchain_explorer/src/views/: block_list.vue  choose_net.vue  main_page.vue  search.vue  show_block.vue
deploy/: .env  .gitignore  deploy-backend.sh  deploy-frontend.sh  docker-compose-local.yml  docker-compose.yml  stegos_diet.Dockerfile
explorer_backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.sh
explorer_backend/migrations/2019-12-08-175905_create_blocks/: down.sql
explorer_backend/migrations/2019-12-18-163604_other_block_fileds/: up.sql
explorer_backend/migrations/2019-12-21-113753_outputs/: down.sql  up.sql
explorer_backend/migrations/2019-12-23-211244_micro_blocks/: down.sql
explorer_backend/migrations/2019-12-29-175614_awards/: down.sql
explorer_backend/migrations/2020-02-12-093624_modify_outputs_structure/: down.sql  up.sql
explorer_backend/migrations/2020-05-18_downsize_and_index/: down.sql  up.sql
explorer_backend/migrations/2020-05-18_num_txs_trigger/: down.sql  up.sql
explorer_backend/src/: api_schema.rs  lib.rs  schema.rs  test.rs
frontend/: .dockerignore  .env  .gitignore  README.md  app.conf  block_responses.txt
frontend/public/: index.html
frontend/src/: App.vue  store.ts
frontend/src/components/: escrow.vue  (+3 more)
(+2 files in other folders)
