[package]
name = "explorer_backend"
version = "0.1.0"
authors = ["Stegos AG <info@stegos.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-cors="0.2.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
diesel = { version = "1.4.3", features = ["postgres", "serde_json"] }
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.1"
stegos_api = {version = "*", branch="dev", git="https://github.com/stegos/stegos/", optional=true}
stegos_node = {version = "*", branch="dev", git="https://github.com/stegos/stegos/", optional=true}
stegos_crypto = {version = "*", branch="dev", git="https://github.com/stegos/stegos/", optional=true}
tokio = { version = "0.2", features = ["full"]}
# async-trait="0.1.2"
futures = "0.3.5"
futures-retry="0.5.0"
failure="0.1"   
log="0.4"
tokio-compat = "0.1"
itertools = "0.7.8"
hex="0.4.1"

[features]
fetcher = ["stegos_api", "stegos_node", "stegos_crypto"]

[[bin]]
name="fetcher"
required-features = ["fetcher"]  

