[package]
name = "explorer_backend"
version = "0.1.0"
authors = ["Vladimir Motylenko <vld@stegos.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0-alpha.3"
actix-cors="0.2.0-alpha.3"
actix-rt = "1.0.0-alpha.3"
env_logger = "0.7.1"
diesel = { version = "1.4.3", features = ["postgres", "serde_json"] }
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.1"
stegos_api = {version = "1.0.0", git="https://github.com/stegos/stegos/", rev="79bd4263", optional=true}
stegos_node = {version = "1.0.0", git="https://github.com/stegos/stegos/", rev="79bd4263", optional=true}
stegos_crypto = {version = "1.0.0", git="https://github.com/stegos/stegos/", rev="79bd4263", optional=true}
tokio = { version = "0.2.4", features = ["rt-core", "macros", "time"]}
futures = {version="0.3", features = ["compat"] }
failure="0.1"
log="0.4"
tokio-compat = "0.1"

[dependencies.futures_01]
optional = true
package = "futures"
version = "0.1.25"

[features]
fetcher = ["stegos_api", "stegos_node", "stegos_crypto", "futures_01"]

[[bin]]
name="fetcher"
required-features = ["fetcher"]  